# api/swagger.yaml
@@ -155,6 +155,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  
+  /api/profiles/{profileId}/dry_jumpstart:
+    post:
+      summary: Dry jumpstart a profile - load tasks to be spawned
+      parameters:
+        - name: profileId
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfileJumpstartRequest'
+      responses:
+        "200":
+          description: A list of tasks to be spawned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AnalysisTaskParameters'
+        "404":
+          description: Profile not found
+        "500":
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /api/detections/list:
     post:
@@ -652,3 +685,20 @@ components:
       required:
         - manual_tasks
         - auto_tasks
+
+    AnalysisTaskParameters:
+      type: object
+      properties:
+        source:
+          type: string
+        source_id:
+          type: string
+        profile_id:
+          type: integer
+        should_save:
+          type: boolean
+      required:
+        - source
+        - source_id
+        - profile_id
+        - should_save
